--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mauna-info-release (2023.11.06) mauna; urgency=medium
+
+  * New upstream version
+  * update
+
+ -- Mauna Linux <dev@maunalinux.top>  Mon, 06 Nov 2023 12:27:16 -0300
+
 mauna-info-release (2023.08.15) mauna; urgency=medium
 
   * New upstream release for Mauna Linux
